<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:text="@string/tvTest"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btTest" />

    <Switch
        android:id="@+id/swTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swTest"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/etText"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="end"
        android:inputType="number"
        android:text="@string/etNumber"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/cbTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbTest" />

    <RadioGroup
        android:id="@+id/rb"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbTest1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rbTest1" />

        <RadioButton
            android:id="@+id/rbTest2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbTest2" />

    </RadioGroup>

    <ToggleButton
        android:id="@+id/tbTest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/IvTest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:entries="@array/lvTest" />
</LinearLayout>